--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "url": "https://github.com/twitter/bootstrap.git"
     }
   ],
-  "github": "https://github.com/rockwood/jam-affix.git"
+  "github": "https://github.com/rockwood/jam-dropdown.git"
 }
